[package]
name = "penumbra"
version = "0.1.0"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["security", "firewall", "http"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/tmfink/penumbra"
description = """
Penumbra: HTTP application-layer firewall shim
"""

[dependencies]
chrono = "0.4"
fern = "0.5"
futures = "0.3"
http = "0.2"
hyper = "0.13"
log = "0.4"
thiserror = "1.0.9"
tokio = { version = "0.2", features = ["full"] }

[dependencies.clap]
version = "2.32"
default-features = false
features = [ "suggestions" ]
