[package]
name = "penumbra"
version = "0.1.0"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["security", "firewall", "http"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/tmfink/penumbra"
description = """
Penumbra: HTTP application-layer firewall shim
"""

[dependencies]
chrono = "0.4.19"
fern = "0.6.1"
futures = "0.3.2"
http = "0.2.8"
hyper = { version = "0.14.9", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }

[dependencies.clap]
version = "3.1"
default-features = false
features = [ "cargo", "std", "suggestions" ]
#features = [ "suggestions" ]
